# kdeskdash

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  lv_conf.h
.atv/: install-manifest.json
.context/compound-engineering/ce-review/2026-06-08-dev-mode-host-metrics/: findings.md
.github/: python.instructions.md  rails.instructions.md  typescript.instructions.md
.github/agents/: data-integrity-guardian.agent.md  data-migration-expert.agent.md  deployment-verification-agent.agent.md  dhh-rails-reviewer.agent.md  julik-frontend-races-reviewer.agent.md  kieran-python-reviewer.agent.md  kieran-rails-reviewer.agent.md  kieran-typescript-reviewer.agent.md  lint.agent.md  schema-drift-detector.agent.md
assets/: brain_rot.c
cmake/: aarch64-toolchain.cmake
deploy/: kdeskdash.env.example  kdeskdash.service  redis-claude.conf  redis-claude.service
docs/brainstorms/: 2026-06-06-dev-mode-host-metrics-requirements.md  2026-06-06-multimode-dashboard-premvp-requirements.md  2026-06-06-mvp-shell-modes-redis-requirements.md  2026-06-09-gol-evolution-requirements.md  2026-06-09-golz-zombies-requirements.md  2026-07-02-claude-mode-agent-activity-requirements.md  2026-07-03-icons-nerdfont-browser-requirements.md  2026-07-18-remote-foreground-mode-requirements.md  2026-07-21-calc-mode-requirements.md  2026-07-21-palette-mode-requirements.md
docs/plans/: 2026-06-06-001-feat-premvp-display-touch-plan.md  2026-06-06-002-feat-mvp-multimode-shell-plan.md  2026-06-07-001-feat-dev-mode-host-metrics-plan.md  2026-06-09-001-feat-gol-evolution-plan.md  2026-06-09-002-feat-golz-zombies-mode-plan.md  2026-06-27-001-feat-golz-machetes-plan.md  2026-07-02-001-feat-claude-mode-plan.md  2026-07-03-001-feat-menu-refresh-plan.md  2026-07-03-002-feat-icons-nerdfont-browser-plan.md  2026-07-04-001-feat-reliability-hardening-plan.md  2026-07-18-001-feat-remote-foreground-mode-plan.md  2026-07-18-002-feat-menu-groups-plan.md  2026-07-18-003-feat-remote-edge-plan.md  2026-07-19-001-feat-remote-apps-plan.md  2026-07-19-002-feat-code-favorites-plan.md  2026-07-21-001-feat-calc-mode-plan.md  2026-07-21-002-feat-palette-mode-plan.md
docs/solutions/best-practices/: adaptive-feedback-loop-sets-equilibrium.md  claude-feed-statusline-is-tui-only.md  lvgl-swipe-vs-tap-gesture-guard.md  quote-include-core-header-shadowing.md  two-layer-faction-reuse.md
lib/cjson/: VERSION
publisher/: README.md  claude-pub.sh  settings-fragment.json
scripts/: deploy.sh  gen-image.sh  kddss  sync-sysroot.sh
src/: bmp_write.h  calc.c  calc.h  claude_feed.c  claude_feed.h  claude_redis.c  claude_redis.h  config.c  config.h  demo_screen.c  demo_screen.h  dev_telemetry.c  dev_telemetry.h  gol.c  gol.h  gol_settings.c  gol_settings.h  golz.c  golz.h  iconset.c  iconset.h  kvscf_feed.c  kvscf_feed.h  kvscf_redis.c  kvscf_redis.h  main.c  mode.h  palette.c  palette.h  redis.c  redis.h  redis_internal.h  registry.c  registry.h  screenshot.c  screenshot.h  shell.c  shell.h  stopwatch.c  stopwatch.h  (+4 more)
src/modes/: calc.c  calc.h  claude.c  claude.h  clock.c  clock.h  dev.c  dev.h  dev_graph.c  dev_graph.h  dev_hostlist.c  dev_hostlist.h  dev_view.c  dev_view.h  foreground.c  foreground.h  game_of_life.c  game_of_life.h  golz.c  golz.h  icons.c  icons.h  menu.c  menu.h  palette.c  palette.h  placeholder.c  placeholder.h
tests/: test_bmp_write.c  test_calc.c  test_claude_feed.c  test_dev_hostlist.c  test_dev_telemetry.c  test_dev_view.c  test_gol.c  test_golz.c  test_iconset.c  test_kvscf_feed.c  test_palette.c  test_registry.c  test_settings.c  test_stopwatch.c  test_telemetry_host.c
tools/: golz_mc.c
